--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -6,7 +6,6 @@
 .pnp.js
 node_modules
 backend/node_modules
-backend/config/config.env
 
 # testing
 /coverage 
@@ -20,6 +19,7 @@ backend/config/config.env
 .env.development.local
 .env.test.local
 .env.production.local
+backend/config/.env
 
 npm-debug.log*
 yarn-debug.log*
